apps/smokeping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
      - name: smokeping
        image: linuxserver/smokeping:2.7.3 # {"$imagepolicy": "flux-system:smokeping"}
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data-volume
          mountPath: /data
        - name: config-volume
          mountPath: /config/Targets
          subPath: Targets
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: smokeping-data
      - name: config-volume
        configMap:
          name: smokeping-config
