apps/smokeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: smokeping
